--- a/Sektionen/Einfuehrung.tex
+++ b/Sektionen/Einfuehrung.tex
@@ -1,3 +1,33 @@
-\section{Einführung}
+\section{Einleitung}
+\subsection{Motivation und Bedeutung der Visualisierung von Unsicherheiten}
+\cite{Padilla2021}
+\subsection{Ziel der Arbeit und Forschungsfragen}
 
-Text ab hier \ldots
+\section{Theoretische Grundlagen}
+\subsection{Grundlagen der Risikowahrnehmung}
+\cite{Larcher2020}
+\subsection{Visualisierungstechniken und ihre psychologischen Effekte}
+\cite{Joslyn2021}
+
+\section{Einfluss von Visualisierungstechniken auf die Risikowahrnehmung}
+\subsection{Unterschiedliche Visualisierungstechniken und ihre Eigenschaften}
+\cite{Pang1997}
+\cite{Kerr2023}
+\cite{Brodlie2012ARO}
+\cite{Haber1990}
+\subsection{Studien zur Risikowahrnehmung in der Finanzanalyse}
+
+\section{Verbesserung der Kommunikation durch Visualisierungstechniken}
+\subsection{Kommunikation zwischen Finanzanalysten und Laieninvestoren}
+\cite{Joslyn2021}
+\subsection{Einsatz von Visualisierungen zur Darstellung von Unsicherheiten}
+
+\section{Übertragung von Erkenntnissen aus anderen Domänen}
+\subsection{Beispiele erfolgreicher Visualisierungstechniken aus anderen Bereichen}
+\cite{Boller2010}
+\subsection{Anwendbarkeit auf den Finanzsektor}
+
+\section{Fazit und Ausblick}
+\subsection{Zusammenfassung der wichtigsten Erkenntnisse}
+\subsection{Mögliche zukünftige Forschungsrichtungen}
+
