--- a/Verzeichnisse/Literaturverzeichnis.bib
+++ b/Verzeichnisse/Literaturverzeichnis.bib
@@ -1,19 +1,103 @@
 % Encoding: UTF-8
 
-@Misc{Duden,
-  author = {Bibliographisches Institut GmbH Dudenverlag},
-  note   = {(Zugriff: 18.04.2020)},
-  title  = {Duden},
-  url    = {https://www.duden.de},
+@article{Padilla2021,
+author = {Padilla, Lace and Kay, Matthew and Hullman, Jessica},
+year = {2021},
+month = {02},
+pages = {1-18},
+title = {Uncertainty Visualization},
+isbn = {9781118445112},
+doi = {10.1002/9781118445112.stat08296}
 }
 
-@book{Papula2006,
-  author    = {Papula, Lothar},
-  publisher = {Vieweg},
-  title     = {{M}athematische {F}ormelsammlung für {I}ngenieure und {N}aturwissenschaftler : mit zahlreichen {R}echenbeispielen und einer ausführlichen {I}ntegraltafel},
-  year      = {2006},
-  address   = {Wiesbaden},
-  isbn      = {9783834801562},
+
+@artile{Larcher2020,
+  author      = {Larcher, Gerhard},
+  title       = {Volatilitaeten},
+  booktitle   = {Quantitative Finance: Strategien, Investments, Analysen},
+  year        = {2020},
+  publisher   = {Springer Fachmedien Wiesbaden},
+  address     = {Wiesbaden},
+  pages       = {573--699},
+  abstract    = {Schon seit l{\"a}ngerem haben wir immer wieder darauf hingewiesen, dass wir uns mit dem Begriff der Volatilit{\"a}t und dem Volatilit{\"a}ts-Parameter in den Bewertungsformeln f{\"u}r Derivate ausf{\"u}hrlich besch{\"a}ftigen werden m{\"u}ssen. Diese Diskussion beginnen wir nun also. Aber wir weisen -- wie schon so oft -- gleich hier wieder einmal auf Folgendes hin: Eine eingehende und tiefgreifende Analyse des Begriffs der Volatilit{\"a}t bedarf einer intensiven Besch{\"a}ftigung und weiterf{\"u}hrender mathematischer Techniken. In Band I unserer Abhandlung werden wir uns daher wieder auf die notwendigen Konzepte und Eigenschaften beschr{\"a}nken m{\"u}ssen. Das Ziel hier wird sein: Den Begriff der Volatilit{\"a}t und die damit verbundenen wesentlichsten Techniken so weit zu begreifen, dass wir das R{\"u}stzeug haben um grundlegende Anwendungen in exakter Weise und mit gut argumentierbaren Methoden durchf{\"u}hren zu k{\"o}nnen (freilich immer im Wissen darum, dass tiefergehende „more advanced`` Methoden und Modelle m{\"o}glicher Weise noch tiefere Einsichten in die jeweilige Anwendung geben k{\"o}nnten).},
+  isbn        = {978-3-658-29158-7},
+  doi         = {10.1007/978-3-658-29158-7_5},
+  url         = {https://doi.org/10.1007/978-3-658-29158-7_5}
 }
+
+@article{Joslyn2021,
+  author    = {Joslyn, Susan and Savelli, Sonia},
+  title     = {Visualizing Uncertainty for Non-Expert End Users: The Challenge of the Deterministic Construal Error},
+  journal   = {Frontiers in Computer Science},
+  volume    = {2},
+  year      = {2021},
+  url       = {https://www.frontiersin.org/articles/10.3389/fcomp.2020.590232},
+  doi       = {10.3389/fcomp.2020.590232},
+  issn      = {2624-9898},
+  abstract  = {There is a growing body of evidence that numerical uncertainty expressions can be used by non-experts to improve decision quality. Moreover, there is some evidence that similar advantages extend to graphic expressions of uncertainty. However, visualizing uncertainty introduces challenges as well. Here, we discuss key misunderstandings that may arise from uncertainty visualizations, in particular the evidence that users sometimes fail to realize that the graphic depicts uncertainty. Instead they have a tendency to interpret the image as representing some deterministic quantity. We refer to this as the deterministic construal error. Although there is now growing evidence for the deterministic construal error, few studies are designed to detect it directly because they inform participants upfront that the visualization expresses uncertainty. In a natural setting such cues would be absent, perhaps making the deterministic assumption more likely. Here we discuss the psychological roots of this key but underappreciated misunderstanding as well as possible solutions. This is a critical question because it is now clear that members of the public understand that predictions involve uncertainty and have greater trust when uncertainty is included. Moreover, they can understand and use uncertainty predictions to tailor decisions to their own risk tolerance, as long as they are carefully expressed, taking into account the cognitive processes involved.}
+}
+
+@article{Pang1997,
+  author    = {Pang, Alex T. and Wittenbrink, Craig M. and Lodha, Suresh K.},
+  title     = {Approaches to Uncertainty Visualization},
+  journal   = {The Visual Computer},
+  volume    = {13},
+  number    = {8},
+  pages     = {370--390},
+  year      = {1997},
+  month     = {November},
+  doi       = {10.1007/s003710050111},
+  url       = {https://doi.org/10.1007/s003710050111},
+  issn      = {1432-2315}
+}
+
+@article{Kerr2023,
+  author    = {Kerr, John and van der Bles, Anne-Marthe and Dryhurst, Sarah and Schneider, Claudia R. and Chopurian, Vivien and Freeman, Alexandra L. J. and van der Linden, Sander},
+  title     = {The effects of communicating uncertainty around statistics, on public trust},
+  journal   = {R. Soc. Open Sci.},
+  volume    = {10},
+  pages     = {230604},
+  year      = {2023},
+  doi       = {10.1098/rsos.230604},
+  url       = {http://doi.org/10.1098/rsos.230604}
+}
+
+@article{Brodlie2012ARO,
+  title     = {A Review of Uncertainty in Data Visualization},
+  author    = {Ken Brodlie and Rodolfo S. Allendes Osorio and Adriano Lopes},
+  booktitle = {Expanding the Frontiers of Visual Analytics and Visualization},
+  year      = {2012},
+  url       = {https://api.semanticscholar.org/CorpusID:16557526}
+}
+
+@article{Haber1990,
+  author    = {Haber, R. B. and McNabb, D. A.},
+  title     = {Visualization Idioms: A Conceptual Model for Scientific Visualization Systems},
+  booktitle = {Visualization in Scientific Computing},
+  publisher = {IEEE Computer Society Press},
+  address   = {London},
+  year      = {1990},
+  pages     = {74--93}
+}
+
+@article{Boller2010,
+  author    = {Boller, Ryan A. and Braun, Scott A. and Miles, Jadrian and Laidlaw, David H.},
+  title     = {Application of Uncertainty Visualization Methods to Meteorological Trajectories},
+  journal   = {Earth Science Informatics},
+  volume    = {3},
+  number    = {1},
+  pages     = {119--126},
+  year      = {2010},
+  month     = {June},
+  doi       = {10.1007/s12145-010-0052-5},
+  url       = {https://doi.org/10.1007/s12145-010-0052-5},
+  issn      = {1865-0481},
+  abstract  = {We present an application of uncertainty visualization to air parcel trajectories generated from a global meteorological model. We derive an approximation of advection uncertainty due to interpolation and incorporate this uncertainty into our visualization of trajectories. Our work enables efficient visual pruning of unlikely results, especially in regions of atmospheric shear, potentially reducing erroneous interpretations. Finally, we apply these methods to a real-world meteorological problem to demonstrate its use.}
+}
+
+
+
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
