--- a/Verzeichnisse/Literaturverzeichnis.bib
+++ b/Verzeichnisse/Literaturverzeichnis.bib
@@ -95,6 +95,15 @@ doi = {10.1002/9781118445112.stat08296}
   abstract  = {We present an application of uncertainty visualization to air parcel trajectories generated from a global meteorological model. We derive an approximation of advection uncertainty due to interpolation and incorporate this uncertainty into our visualization of trajectories. Our work enables efficient visual pruning of unlikely results, especially in regions of atmospheric shear, potentially reducing erroneous interpretations. Finally, we apply these methods to a real-world meteorological problem to demonstrate its use.}
 }
 
+@book{Knight1921,
+  author    = {Frank H. Knight},
+  title     = {Risk, Uncertainty, and Profit},
+  year      = {1921},
+  publisher = {Houghton Mifflin Company},
+  address   = {Boston and New York},
+  url       = {https://www.econlib.org/library/Knight/knRUP.html},
+}
+
 
 
 
