--- a/Verzeichnisse/Literaturverzeichnis.bib
+++ b/Verzeichnisse/Literaturverzeichnis.bib
@@ -104,6 +104,44 @@ doi = {10.1002/9781118445112.stat08296}
   url       = {https://www.econlib.org/library/Knight/knRUP.html},
 }
 
+@book{VisualizationPsychology2023,
+  editor = {Danielle Albers Szafir and Rita Borgo and Min Chen and Darren J. Edwards and Brian Fisher and Lace Padilla},
+  title = {Visualization Psychology},
+  publisher = {Springer Cham},
+  year = {2023},
+  edition = {1},
+  isbn = {978-3-031-34737-5},
+  isbn = {978-3-031-34740-5},
+  isbn = {978-3-031-34738-2},
+  doi = {10.1007/978-3-031-34738-2},
+  url = {https://doi.org/10.1007/978-3-031-34738-2},
+  note = {Published: 06 November 2023, Softcover due: 08 December 2023, Number of Pages: XIX, 392, Number of Illustrations: 1 b/w illustrations},
+  address = {Cham, Switzerland}
+}
+
+@book{vonNeumann1944,
+  author = {John von Neumann and Oskar Morgenstern},
+  title = {Theory of Games and Economic Behavior},
+  publisher = {Princeton University Press},
+  year = {1944},
+  address = {Princeton, NJ},
+  edition = {1},
+  isbn = {978-0-691-00362-3}
+}
+
+@article{Tversky74,
+author = {Amos Tversky  and Daniel Kahneman },
+title = {Judgment under Uncertainty: Heuristics and Biases},
+journal = {Science},
+volume = {185},
+number = {4157},
+pages = {1124-1131},
+year = {1974},
+doi = {10.1126/science.185.4157.1124},
+URL = {https://www.science.org/doi/abs/10.1126/science.185.4157.1124},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.185.4157.1124},
+abstract = {This article described three heuristics that are employed in making judgments under uncertainty: (i) representativeness, which is usually employed when people are asked to judge the probability that an object or event A belongs to class or process B; (ii) availability of instances or scenarios, which is often employed when people are asked to assess the frequency of a class or the plausibility of a particular development; and (iii) adjustment from an anchor, which is usually employed in numerical prediction when a relevant value is available. These heuristics are highly economical and usually effective, but they lead to systematic and predictable errors. A better understanding of these heuristics and of the biases to which they lead could improve judgments and decisions in situations of uncertainty.}}
+
 
 
 
