--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -1,14 +1,14 @@
 \documentclass[a4paper,12pt]{article}
 \input{framework/Setup}
 
-\def\Titel{Vorlage für verschiedene Dokumente der HS Coburg}
-\def\Dozent{<DOZENT>}
+\def\Titel{Einfluss von Unsicherheits-Visualisierungen auf Entscheidungsfindungen an Finanzmärkten}
+\def\Dozent{Prof. Helbig}
 
 % Infos zum Autor
-\def\Autorenname{<NACHNAME, VORNAME>}
-\def\Geburtsdatum{<GEBURTSDATUM>}
-\def\Matrikelnummer{<MATRIKELNUMMER>}
-\def\Studiengang{<STUDIENGANG>}
+\def\Autorenname{Keck, Paul}
+\def\Geburtsdatum{06.05.2002}
+\def\Matrikelnummer{00767721}
+\def\Studiengang{Bachelor Informatik}
 
 % Infos zum Unternehmen
 \def\Unternehmen{<FIRMENNAME>}
@@ -27,7 +27,7 @@
 \def\Ende{<ENDE>}
 \def\Abgabe{\today}
 
-\begin{HSCDocument}[preset=Praxisbericht]
+\begin{HSCDocument}[preset=Bachelorarbeit]
 
   \include{Sektionen/Einfuehrung}
 
