--- a/Sektionen/Einfuehrung.tex
+++ b/Sektionen/Einfuehrung.tex
@@ -118,7 +118,7 @@ insbesondere bei komplexen und wichtigen Entscheidungen, bei denen Fehler schwer
 \section{Verbesserung der Kommunikation durch Visualisierungstechniken}
 \subsection{Kommunikation zwischen Finanzanalysten und Laieninvestoren}
 \cite{Joslyn2021}
-\subsection{Einsatz von Visualisierungen zur Darstellung von Unsicherheiten}
+\subsection{Einsatz von Visualisierungen zur Kommunikation von Unsicherheiten}
 
 \section{Übertragung von Erkenntnissen aus anderen Domänen}
 \subsection{Beispiele erfolgreicher Visualisierungstechniken aus anderen Bereichen}
@@ -127,5 +127,5 @@ insbesondere bei komplexen und wichtigen Entscheidungen, bei denen Fehler schwer
 
 \section{Fazit und Ausblick}
 \subsection{Zusammenfassung der wichtigsten Erkenntnisse}
-\subsection{Mögliche zukünftige Forschungsrichtungen}
+\subsection{Proposal für künftige Forschung}
 
