--- a/Verzeichnisse/Literaturverzeichnis.bib
+++ b/Verzeichnisse/Literaturverzeichnis.bib
@@ -142,9 +142,9 @@ URL = {https://www.science.org/doi/abs/10.1126/science.185.4157.1124},
 eprint = {https://www.science.org/doi/pdf/10.1126/science.185.4157.1124},
 abstract = {This article described three heuristics that are employed in making judgments under uncertainty: (i) representativeness, which is usually employed when people are asked to judge the probability that an object or event A belongs to class or process B; (ii) availability of instances or scenarios, which is often employed when people are asked to assess the frequency of a class or the plausibility of a particular development; and (iii) adjustment from an anchor, which is usually employed in numerical prediction when a relevant value is available. These heuristics are highly economical and usually effective, but they lead to systematic and predictable errors. A better understanding of these heuristics and of the biases to which they lead could improve judgments and decisions in situations of uncertainty.}}
 
+@article{Kay2016, author = {Kay, Matthew and Kola, Tara and Hullman, Jessica R. and Munson, Sean A.}, title = {When (ish) is My Bus? User-centered Visualizations of Uncertainty in Everyday, Mobile Predictive Systems}, year = {2016}, isbn = {9781450333627}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, url = {https://doi.org/10.1145/2858036.2858558}, doi = {10.1145/2858036.2858558}, abstract = {Users often rely on realtime predictions in everyday contexts like riding the bus, but may not grasp that such predictions are subject to uncertainty. Existing uncertainty visualizations may not align with user needs or how they naturally reason about probability. We present a novel mobile interface design and visualization of uncertainty for transit predictions on mobile phones based on discrete outcomes. To develop it, we identified domain specific design requirements for visualizing uncertainty in transit prediction through: 1) a literature review, 2) a large survey of users of a popular realtime transit application, and 3) an iterative design process. We present several candidate visualizations of uncertainty for realtime transit predictions in a mobile context, and we propose a novel discrete representation of continuous outcomes designed for small screens, quantile dotplots. In a controlled experiment we find that quantile dotplots reduce the variance of probabilistic estimates by ~1.15 times compared to density plots and facilitate more confident estimation by end-users in the context of realtime transit prediction scenarios.}, booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems}, pages = {5092–5103}, numpages = {12}, keywords = {dotplots, end-user visualization, mobile interfac-es, transit predictions, uncertainty visualization}, location = {San Jose, California, USA}, series = {CHI '16} }
 
-
-
+@article{Fernandes2018, author = {Fernandes, Michael and Walls, Logan and Munson, Sean and Hullman, Jessica and Kay, Matthew}, title = {Uncertainty Displays Using Quantile Dotplots or CDFs Improve Transit Decision-Making}, year = {2018}, isbn = {9781450356206}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, url = {https://doi.org/10.1145/3173574.3173718}, doi = {10.1145/3173574.3173718}, abstract = {Everyday predictive systems typically present point predictions, making it hard for people to account for uncertainty when making decisions. Evaluations of uncertainty displays for transit prediction have assessed people's ability to extract probabilities, but not the quality of their decisions. In a controlled, incentivized experiment, we had subjects decide when to catch a bus using displays with textual uncertainty, uncertainty visualizations, or no-uncertainty (control). Frequency-based visualizations previously shown to allow people to better extract probabilities (quantile dotplots) yielded better decisions. Decisions with quantile dotplots with 50 outcomes were(1) better on average, having expected payoffs 97\% of optimal(95\% CI: [95\%,98\%]), 5 percentage points more than control (95\% CI: [2,8]); and (2) more consistent, having within-subject standard deviation of 3 percentage points (95\% CI:[2,4]), 4 percentage points less than control (95\% CI: [2,6]).Cumulative distribution function plots performed nearly as well, and both outperformed textual uncertainty, which was sensitive to the probability interval communicated. We discuss implications for real time transit predictions and possible generalization to other domains.}, booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems}, pages = {1–12}, numpages = {12}, keywords = {cumulative distribution plots, dotplots, mobileinterfaces, transit predictions, uncertainty visualization}, location = {, Montreal QC, Canada, }, series = {CHI '18} }
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
